# BME-RM-Remove

./: .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json
.claude/memory/: active.md  agents-log.md  architecture.md  changelog.md  components.md  decisions.md  summary.md
.gemini/: GEMINI.md  settings.json
.toh/: manifest.json
.toh/memory/: active.md  agents-log.md  architecture.md  changelog.md  components.md  decisions.md  summary.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
backend/src/db/: mssql.rs
backend/src/ldap/: client.rs  config.rs  error.rs  mod.rs  user.rs
backend/src/models/: auth.rs  mod.rs  rm.rs
backend/src/routes/: auth.rs  mod.rs  rm.rs
frontend/: .dockerignore  Dockerfile  playwright.config.ts
frontend/app/: globals.css  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/main/: page.tsx
frontend/components/: Header.tsx  RMDataTable.tsx  RemoveButton.tsx  RunNoInput.tsx
frontend/components/ui/: toast.tsx
frontend/lib/: mock-data.ts
frontend/lib/api/: auth.ts  rm.ts
frontend/my-app/: package-lock.json  package.json
frontend/my-app/app/: layout.tsx
frontend/my-app/components/: RMDataTable.tsx
frontend/my-app/lib/: nwfth-theme.ts
frontend/my-app/stores/: authStore.ts
frontend/my-app/tests/: dashboard.spec.ts  login.spec.ts
frontend/playwright-report/: index.html
frontend/stores/: authStore.ts  rmStore.ts
frontend/tests/: dashboard.spec.ts  login.spec.ts
frontend/types/: rm.ts
(+2 files in other folders)
