[package]
name = "rm-partial-pick-remover-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
jsonwebtoken = "9"
bcrypt = "0.15"
thiserror = "1.0"
anyhow = "1.0"
ldap3 = "0.11"
native-tls = "0.2"
url = "2.5"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]
